--- a/_sources/module_01/03_Numerical_error.ipynb
+++ b/_sources/module_01/03_Numerical_error.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b4905565",
+   "id": "e109a5d4",
    "metadata": {},
    "source": [
     "> __Content modified under Creative Commons Attribution license CC-BY\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e76a12b6",
+   "id": "f29709e4",
    "metadata": {},
    "source": [
     "# 03 - Numerical Error\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "745fb267",
+   "id": "a70af297",
    "metadata": {},
    "source": [
     "### Define constants and analytical solution (meters-kilogram-sec)\n",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "439c201c",
+   "id": "d383d21c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d0055a0",
+   "id": "a0516589",
    "metadata": {},
    "source": [
     "## Exercise:\n",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8100fe6",
+   "id": "3cb94d91",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "71bc5b52",
+   "id": "efb26d6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04f68d43",
+   "id": "4f2e18c1",
    "metadata": {},
    "source": [
     "Inside the curly brackets—the placeholders for the values you want to\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "452567f4",
+   "id": "1ffbca64",
    "metadata": {},
    "source": [
     "If you print these values using the string formatter,  with a total\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1abaea8c",
+   "id": "acb93ab6",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a02c9f0",
+   "id": "02636c29",
    "metadata": {},
    "source": [
     "## Analytical vs Computational Solution\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2120407b",
+   "id": "7f56a26a",
    "metadata": {},
    "source": [
     "## Define numerical method\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a5852011",
+   "id": "574707e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e6a41a",
+   "id": "433585a8",
    "metadata": {},
    "source": [
     "Now, you create a `for`-loop to solve for `v_numerical` at times 2, 4, 6, 8, 10, and 12 sec. We don't need to solve for `v_numerical` at time 0 seconds because this is the initial velocity of the object. In this example, the initial velocity is v(0)=0 m/s."
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "86378961",
+   "id": "7919b4d6",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7554305",
+   "id": "a6ef1fc9",
    "metadata": {},
    "source": [
     "Let's print the time, velocity (analytical) and velocity (numerical) to compare the results in a table. We'll use the `print` and `format` commands to look at the results."
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3958cb19",
+   "id": "f421e682",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "579814d4",
+   "id": "779ee077",
    "metadata": {},
    "source": [
     "## Compare solutions (plotting)\n",
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "aba9d089",
+   "id": "3c136127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8523ef30",
+   "id": "e435ba7f",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac3d6a63",
+   "id": "034f9436",
    "metadata": {},
    "source": [
     "**Note:** In the above plot, the numerical solution is given at discrete points connected by lines, while the analytical solution is drawn as a line. This is a helpful convention. We plot discrete data such as numerical solutions or measured data as points and lines while analytical solutions are drawn as lines. \n",
@@ -420,14 +420,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15b46ab7",
+   "id": "80eb3b2b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "29fe3977",
+   "id": "16d7cce9",
    "metadata": {},
    "source": [
     "## Errors in Numerical Modeling\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0ff5129",
+   "id": "755904e4",
    "metadata": {},
    "source": [
     "## 1- Truncation error\n",
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "554671f5",
+   "id": "2cb74391",
    "metadata": {},
    "source": [
     "### Truncation error as a Taylor series \n",
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6306855",
+   "id": "d00297d3",
    "metadata": {},
    "source": [
     "In the .gif below, the error in the function is reduced by including higher-order terms in the Taylor series approximation. \n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a86bd0e6",
+   "id": "49187902",
    "metadata": {},
    "source": [
     "## 2- Roundoff\n",
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74b50b02",
+   "id": "270603e0",
    "metadata": {},
    "source": [
     "1. digital representation of $\\pi$ \n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "345980dc",
+   "id": "32b35663",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6450b12",
+   "id": "e49914ca",
    "metadata": {},
    "source": [
     "In order to store the number in a computer you can only use so many bits, shown below is the [64-bit standard for floating point numbers](https://en.wikipedia.org/wiki/Double-precision_floating-point_format):\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f8860b69",
+   "id": "b1b1ab77",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c974b3e",
+   "id": "ada17c4c",
    "metadata": {},
    "source": [
     "In the previous block of code, you see $\\pi$ printed for 3 cases:\n",
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6961a992",
+   "id": "9ba71c5f",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e18b2d0e",
+   "id": "97aa0524",
    "metadata": {},
    "source": [
     "### Machine epsilon\n",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8cf8ba14",
+   "id": "886a688b",
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,14 @@
      "output_type": "stream",
      "text": [
       "summation 1+eps/2 over  1000  minus 1 = 1.1102230246251565e-13\n",
-      "500.0 *eps= 1.1102230246251565e-13\n"
+      "500.0 "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*eps= 1.1102230246251565e-13\n"
      ]
     }
    ],
@@ -706,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c412f231",
+   "id": "83da9f12",
    "metadata": {},
    "source": [
     "### Exercise\n",
@@ -718,7 +725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30539769",
+   "id": "af2da8ae",
    "metadata": {},
    "source": [
     "## Freefall Model (revisited)\n",
@@ -737,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5af265fe",
+   "id": "fbbba45a",
    "metadata": {},
    "source": [
     "### Freefall example\n",
@@ -757,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "097e0009",
+   "id": "c54d6ada",
    "metadata": {},
    "source": [
     "## Computer model error =  truncation + roundoff\n",
@@ -794,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ab82f0ad",
+   "id": "34542140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75038d28",
+   "id": "96a8d50e",
    "metadata": {},
    "source": [
     "We can visualize how the approximation approaches the exact solution with this method. The process of approaching the \"true\" solution is called **convergence**. \n",
@@ -842,15 +849,15 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cfa167aa",
+   "id": "7705bf3e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 156 µs, sys: 38 µs, total: 194 µs\n",
-      "Wall time: 176 µs\n"
+      "CPU times: user 177 µs, sys: 34 µs, total: 211 µs\n",
+      "Wall time: 200 µs\n"
      ]
     }
    ],
@@ -863,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f7ffbd5",
+   "id": "5fcc7f5f",
    "metadata": {},
    "source": [
     "The block of code above assigned three variables from the function `freefall`. \n",
@@ -880,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8543676a",
+   "id": "58eeea24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,13 +898,13 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "95823783",
+   "id": "09c2dfa7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa912c46790>"
+       "<matplotlib.legend.Legend at 0x7f2a18a20b20>"
       ]
      },
      "execution_count": 16,
@@ -931,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fc31fec",
+   "id": "4d07efa2",
    "metadata": {},
    "source": [
     "### Exercise\n",
@@ -941,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aef5db27",
+   "id": "12547e9e",
    "metadata": {},
    "source": [
     "### Convergence of a numerical model\n",
@@ -960,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e0d69f36",
+   "id": "1cde5588",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c1feaa78",
+   "id": "8a2df95d",
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1023,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "952e7515",
+   "id": "83119e8c",
    "metadata": {},
    "source": [
     "In the above plot \"Truncation and roundoff error accumulation in log-log\n",
@@ -1029,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dd5742d",
+   "id": "1498843e",
    "metadata": {},
    "source": [
     "## What you've learned\n",
@@ -1045,7 +1052,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e62c75a2",
+   "id": "6d07a631",
    "metadata": {},
    "source": [
     "# Problems\n",
@@ -1081,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2999bf4f",
+   "id": "754683b8",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "718129ad",
+   "id": "41e18464",
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c84a0b15",
+   "id": "08e99e59",
    "metadata": {},
    "source": [
     "__d.__ As the number of time steps increases, the Euler approximation approaches the analytical solution, not the measured data. The best-case scenario is that the Euler solution is the same as the analytical solution."
@@ -1134,7 +1141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3e8b87d",
+   "id": "3bba55ea",
    "metadata": {},
    "source": [
     "2. In the freefall example you used smaller time steps to decrease the **truncation error** in our Euler approximation. Another way to decrease approximation error is to continue expanding the Taylor series. Consider the function f(x)\n",
@@ -1153,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e6bd12f9",
+   "id": "89f42660",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37c622e6",
+   "id": "313a7a6c",
    "metadata": {},
    "outputs": [],
    "source": []
