--- a/_sources/module_04/02_Gauss_elimination.ipynb
+++ b/_sources/module_04/02_Gauss_elimination.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c243d721",
+   "id": "1c2f69e2",
    "metadata": {},
    "source": [
     "# Gauss Elimination\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2b63fd90",
+   "id": "434dcd4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3ed6e6ae",
+   "id": "248e2243",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "698de508",
+   "id": "b27f8a09",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c5c3969",
+   "id": "aaae1b4a",
    "metadata": {},
    "source": [
     "## Graphical interpretation of Ill-conditioned\n",
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e6787d78",
+   "id": "a299f6a7",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f396a3ec",
+   "id": "dc6496f3",
    "metadata": {},
    "source": [
     "## Discussion\n",
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "08a8020e",
+   "id": "b8f83c84",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "545d810a",
+   "id": "6802359f",
    "metadata": {},
    "source": [
     "## Exercise \n",
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0ff6aca4",
+   "id": "b7794a55",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10d015ec",
+   "id": "66bf7795",
    "metadata": {},
    "source": [
     "## N>3 Degrees of Freedoms\n",
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "25f45a8f",
+   "id": "295c175e",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d8ed936",
+   "id": "aef131cf",
    "metadata": {},
    "source": [
     "Now, subtract $1/5*A[0,:]$ from $A[1]$. \n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9995eefc",
+   "id": "edc963d8",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a62aa482",
+   "id": "e112dd82",
    "metadata": {},
    "source": [
     "Now, subtract $1/10*A[0,:]$ from $A[2,:]$. \n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "052ad79b",
+   "id": "1fc4666f",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de8ba9d9",
+   "id": "ea1f9e69",
    "metadata": {},
    "source": [
     "Finally, you can substract $1.8/0.6*A[1,:]$ from $A[2,:]\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7c5f6957",
+   "id": "24f9f64a",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9eb2811",
+   "id": "9ad45d23",
    "metadata": {},
    "source": [
     "## Back substitution\n",
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bb301ca9",
+   "id": "fa85b640",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "41c5ff17",
+   "id": "144e91a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c34f67d0",
+   "id": "0afb3c4c",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58d8acfc",
+   "id": "88a2154c",
    "metadata": {},
    "source": [
     "## Revisit Example with Mixing Tanks\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b7694fd7",
+   "id": "b3580faf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5e34cb5f",
+   "id": "225a0e43",
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8214382",
+   "id": "3498d83f",
    "metadata": {},
    "source": [
     "## Solving the same problem with different inputs  \n",
@@ -794,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1f52549c",
+   "id": "71f913a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e02a8063",
+   "id": "1725d7bc",
    "metadata": {},
    "source": [
     "### Exercise\n",
@@ -817,14 +817,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7efa1157",
+   "id": "e37fc3dd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0c89576b",
+   "id": "f9342790",
    "metadata": {},
    "source": [
     "Now, you can rewrite our problem $\\mathbf{Ax} = \\mathbf{b}$ as $\\mathbf{LUx} = \\mathbf{b}$. This may not see helpful at first, but take a look at the new system of equations that you can solve\n",
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9964f4e9",
+   "id": "cd38e337",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,15 +915,15 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6a913f77",
+   "id": "f8d7bb46",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 379 µs, total: 379 µs\n",
-      "Wall time: 272 µs\n"
+      "CPU times: user 311 µs, sys: 72 µs, total: 383 µs\n",
+      "Wall time: 281 µs\n"
      ]
     }
    ],
@@ -941,15 +941,15 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "19507ad8",
+   "id": "4597891d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 500 µs, sys: 111 µs, total: 611 µs\n",
-      "Wall time: 447 µs\n"
+      "CPU times: user 297 µs, sys: 69 µs, total: 366 µs\n",
+      "Wall time: 267 µs\n"
      ]
     }
    ],
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f0a0686",
+   "id": "47a1a92d",
    "metadata": {},
    "source": [
     "### Comparing Gauss elimination to LU solution method\n",
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "50a340ca",
+   "id": "513e2a8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,15 +996,15 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d15207d1",
+   "id": "43052211",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 49.1 ms, sys: 0 ns, total: 49.1 ms\n",
-      "Wall time: 48.8 ms\n"
+      "CPU times: user 60.4 ms, sys: 0 ns, total: 60.4 ms\n",
+      "Wall time: 57.5 ms\n"
      ]
     }
    ],
@@ -1022,15 +1022,15 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "102a2684",
+   "id": "16efe387",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 96.7 ms, sys: 9.06 ms, total: 106 ms\n",
-      "Wall time: 97.5 ms\n"
+      "CPU times: user 114 ms, sys: 397 µs, total: 114 ms\n",
+      "Wall time: 108 ms\n"
      ]
     }
    ],
@@ -1047,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "86e3e6cf",
+   "id": "06471c4d",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8da89da2",
+   "id": "2d848fc2",
    "metadata": {},
    "source": [
     "## Efficient storage of a matrix\n",
@@ -1142,14 +1142,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d61d53d",
+   "id": "396961bc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "852bfaf7",
+   "id": "59ae6655",
    "metadata": {},
    "source": [
     "## Create LU decomposition function\n",
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "295594b2",
+   "id": "0fbfcc77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d6d2af3",
+   "id": "2abeda3f",
    "metadata": {},
    "source": [
     "### Exercise\n",
@@ -1225,14 +1225,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e32ffc4c",
+   "id": "eb37350d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cd808ffe",
+   "id": "3d7574c8",
    "metadata": {},
    "source": [
     "### Problem (Diagonal element is zero)\n",
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e1d5d487",
+   "id": "94d69cd4",
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0acfe185",
+   "id": "f96ade5a",
    "metadata": {},
    "source": [
     "According to our `GaussNaive` solution, $x_1=0$ and $x_2=2/3$, but plugging these values into our original equation you get the following result:\n",
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2c683201",
+   "id": "d8ba51cf",
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09ec9cf6",
+   "id": "d642cb7d",
    "metadata": {},
    "source": [
     "If you switch equation 1 with equation 2, the result is\n",
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f22df7a6",
+   "id": "d2aaed78",
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fa663f",
+   "id": "4fdf47fb",
    "metadata": {},
    "source": [
     "Now consider the (b) equations. You should notice the $\\mathbf{0}$ in the first diagonal position will be a problem. Really you can the first row with any other row to get a solution.\n",
@@ -1422,7 +1422,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d55c3d4a",
+   "id": "a90960ad",
    "metadata": {},
    "outputs": [
     {
@@ -1439,11 +1439,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2208/1119853754.py:24: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "/tmp/ipykernel_2521/1119853754.py:24: RuntimeWarning: divide by zero encountered in double_scalars\n",
       "  factor = Aug[i,k]/Aug[k,k]\n",
-      "/tmp/ipykernel_2208/1119853754.py:25: RuntimeWarning: invalid value encountered in multiply\n",
+      "/tmp/ipykernel_2521/1119853754.py:25: RuntimeWarning: invalid value encountered in multiply\n",
       "  Aug[i,:] = Aug[i,:] - factor*Aug[k,:]\n",
-      "/tmp/ipykernel_2208/1119853754.py:24: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "/tmp/ipykernel_2521/1119853754.py:24: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  factor = Aug[i,k]/Aug[k,k]\n"
      ]
     }
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9484c35",
+   "id": "ef823d84",
    "metadata": {},
    "source": [
     "## Exercise\n",
@@ -1470,14 +1470,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5507914",
+   "id": "76c393f7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4f07eb54",
+   "id": "06307c40",
    "metadata": {},
    "source": [
     "## Existing [linear algebra functions in Python](https://docs.scipy.org/doc/numpy/reference/routines.linalg.html)\n",
@@ -1508,7 +1508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "85c50b8b",
+   "id": "66a50bb6",
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "63835baa",
+   "id": "e8252967",
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7f3bb8a3",
+   "id": "57ef4ad9",
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb07965",
+   "id": "ba65db42",
    "metadata": {},
    "source": [
     "## What you've learned\n",
@@ -1647,14 +1647,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4d7558e",
+   "id": "2be5b61f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "84a2e1a4",
+   "id": "33221413",
    "metadata": {},
    "source": [
     "![Triangular truss](../images/truss.png)\n",
@@ -1687,14 +1687,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "137036eb",
+   "id": "cd3e10b9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3e9c2802",
+   "id": "3025378c",
    "metadata": {},
    "source": [
     "3. Using the same truss as shown above, let's calculate the tension in bar 1, $P_1$, when $\\theta=[0...90^o]$ and $F=[100...1100]~kN$. When $\\theta\\neq 0$, the resulting 6 equations and 6 unknowns are given in the following matrix\n",
@@ -1732,7 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b51d27e",
+   "id": "8413e151",
    "metadata": {},
    "outputs": [],
    "source": []
