--- a/_sources/module_05/02_Keep_it_steady.ipynb
+++ b/_sources/module_05/02_Keep_it_steady.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "62e231a3",
+   "id": "f069fe45",
    "metadata": {},
    "source": [
     "# Keep it Steady\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f7404cae",
+   "id": "da2db4dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "184ce7ab",
+   "id": "51a028bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e5319b",
+   "id": "c6543a9a",
    "metadata": {},
    "source": [
     "$\\left[\\begin{array}{cccccc}\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c2236264",
+   "id": "0d9a5698",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f44cfa",
+   "id": "cf3da7f1",
    "metadata": {},
    "source": [
     "### Observing your set of equations\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a8accb1e",
+   "id": "614c437e",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9977e8b",
+   "id": "7c3792ae",
    "metadata": {},
    "source": [
     "### Exercise\n",
@@ -264,14 +264,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe277751",
+   "id": "3e4b1156",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "07a4871b",
+   "id": "bf1a05e3",
    "metadata": {},
    "source": [
     "## Static beam deflections\n",
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "de7a20da",
+   "id": "8b8fe12b",
    "metadata": {},
    "outputs": [
     {
@@ -424,13 +424,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b356e044",
+   "id": "5c4e407e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f2c39d60d00>]"
+       "[<matplotlib.lines.Line2D at 0x7f8b430cdb20>]"
       ]
      },
      "execution_count": 6,
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51e03d57",
+   "id": "d53a1c2d",
    "metadata": {},
    "source": [
     "### Exercise \n",
@@ -474,14 +474,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d074c419",
+   "id": "d70b4e71",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7e084cac",
+   "id": "3018beba",
    "metadata": {},
    "source": [
     "### Discussion\n",
@@ -492,14 +492,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de8a5cba",
+   "id": "d5b47401",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "675c625b",
+   "id": "d7d6e791",
    "metadata": {},
    "source": [
     "## What You've Learned\n",
@@ -534,14 +534,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "903f8ea0",
+   "id": "6cb657a8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d1460b3c",
+   "id": "ad4f236e",
    "metadata": {},
    "source": [
     "2. Consider the encastre beam shown in the __Static Beam deflections__ section. Use the following material and geometry (1-m steel rod 1-cm-by-1-cm) with 100 N/m load applied\n",
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89a72404",
+   "id": "b393d305",
    "metadata": {},
    "outputs": [],
    "source": []
